@@ -130,6 +130,13 @@ command to generate the output files.
       </magic>
       <glob pattern="*.xspf"/>
   </mime-type>
+  <mime-type type="audio/x-iriver-pla">
+  <_comment>iRiver Playlist</_comment>
+    <magic priority="50">
+      <match type="string" value="iriver UMS PLA" offset="4"/>
+    </magic>
+    <glob pattern="*.pla"/>
+  </mime-type>
   <mime-type type="application/pgp-encrypted">
     <_comment>PGP/MIME-encrypted message header</_comment>
     <magic priority="50">
